# verbaMetrics

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ruff.yml
src/: main.py
src/handlers/: dict.py  message_handler.py  target_word_analyzer.py  text_processor.py
src/logger/: logger.py
src/rabbitmq/: connection.py  publisher.py
