[project]
name = "verbametrics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aio-pika==9.5.1",
    "aiormq==6.8.1",
    "annotated-types==0.7.0",
    "anyio==4.7.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "dawg-python==0.7.2",
    "docopt==0.6.2",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.6",
    "h11==0.14.0",
    "idna==3.10",
    "intervaltree==3.1.0",
    "ipymarkup==0.9.0",
    "joblib==1.4.2",
    "loguru==0.7.3",
    "multidict==6.1.0",
    "natasha==1.6.0",
    "navec==0.10.0",
    "nltk==3.9.1",
    "numpy==2.2.0",
    "pamqp==3.3.0",
    "pip==23.1.2",
    "propcache==0.2.1",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "pymorphy2==0.9.1",
    "pymorphy2-dicts-ru==2.4.417127.4579844",
    "pymorphy3==2.0.2",
    "pymorphy3-dicts-ru==2.4.417150.4580142",
    "razdel==0.5.0",
    "regex==2024.11.6",
    "ruff==0.12.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "setuptools >= 68.2.2, < 80.3.1",
    "slovnet==0.6.0",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "starlette==0.41.3",
    "threadpoolctl==3.5.0",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "uvicorn==0.29.0",
    "win32-setctime==1.2.0",
    "yargy==0.16.0",
    "yarl==1.18.3",
]

[tool.ruff]
exclude = [
  "path/to/tensorflow/**",
  "some/other/path/**"
]
